# Backtracking-On-Fibonacci-Sequence

./: .gitignore  CMakeLists.txt  Makefile  README.md  arquivo  arquivo.c  main  readme.txt
src/: arquivo.c  fibonacci.c  fibonacci.h  file.c  file.h  main  main.c  matrix.c  matrix.h  test  test-10-15.txt  test-4-11.txt
tests/: funcional1.txt  funcional2.txt  random-1-12.txt  random-1-23.txt  random-1-4.txt  random-1-7.txt  random-100-100.txt  random-4-1.txt  random-4-10.txt  random-4-17.txt  random-5-20.txt  random-5-23.txt  random-5-9.txt  random-6-13.txt  random-6-19.txt  random-6-21.txt  random-6-3.txt  random-7-18.txt  random-7-2.txt  random-7-5.txt  random-7-7.txt  random-8-18.txt  random-8-24.txt  test-2-6.txt  test2.txt  test4.txt  test5.txt
